[🐛] Fixed visibility issue
text used to show up after the first refresh, fixed with a simple setTimeout function.

--- a/smiley-feedback/smiley.css
+++ b/smiley-feedback/smiley.css
@@ -22,7 +22,7 @@ body
 
 .anim
 {
-    transform: translateY(-400%) !important;
+    transform: translateY(-900%) !important;
     transition: transform 1s ease;
     display: unset;
 }
@@ -86,9 +86,7 @@ body
     text-align: center;
     margin: 0;
     position: absolute;
-    top: 50%;
-    -ms-transform: translateY(600%);
-    transform: translateY(700%);
+    bottom: -200px;
     font-size: 20px;
 }
 
